[gd_scene load_steps=6 format=3 uid="uid://cvkil57cca0bs"]

[ext_resource type="Script" uid="uid://d1v65rtsenrbc" path="res://src/GUI/round_end_screen.gd" id="1_7xaod"]
[ext_resource type="Texture2D" uid="uid://bosd8cw44mqb4" path="res://res/sprites/win.png" id="1_l4tdj"]
[ext_resource type="Texture2D" uid="uid://i27tjvrq5smy" path="res://res/sprites/lose.png" id="2_7vicr"]
[ext_resource type="Theme" uid="uid://chdy4l3l6ghjk" path="res://res/themes/store_theme.tres" id="3_7vicr"]
[ext_resource type="Texture2D" uid="uid://3ilpd4gb8gqv" path="res://res/sprites/gold.png" id="5_656bn"]

[node name="RoundEndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7xaod")

[node name="WinTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = -274.0
offset_right = 107.5
offset_bottom = -163.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_l4tdj")

[node name="Lose Texture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -274.0
offset_right = 145.5
offset_bottom = -163.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7vicr")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = 276.0
offset_right = 52.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7vicr")
text = "Continue"

[node name="GoldAmount" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 576.0
offset_top = 180.0
offset_right = 612.0
offset_bottom = 203.0
theme = ExtResource("3_7vicr")
bbcode_enabled = true
text = "999"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="GoldIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 553.0
offset_top = 180.0
offset_right = 576.0
offset_bottom = 203.0
texture = ExtResource("5_656bn")
expand_mode = 1
